<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Rejestracja"
    android:background="@drawable/blekitne"
    >

    <LinearLayout
        android:layout_width="398dp"
        android:layout_height="470dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.498">

        <EditText
            android:id="@+id/Imie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/imie"
            android:inputType="textPersonName"
            android:maxLength="50"
            android:textColor="@color/white"

            android:textColorHint="@color/white"
            android:textColorLink="@color/white" />

        <EditText
            android:id="@+id/Nazwisko"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/nazwisko"
            android:inputType="textPersonName"
            android:maxLength="80"
            android:textColor="@color/white"

            android:textColorHint="@color/white"
            android:textColorLink="@color/white" />

        <EditText
            android:id="@+id/Email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textPersonName"
            android:maxLength="255"
            android:textColor="@color/white"

            android:textColorHint="@color/white"
            android:textColorLink="@color/white" />

        <EditText
            android:id="@+id/Telefon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/telefon"
            android:inputType="phone"
            android:maxLength="9"
            android:textColor="@color/white"

            android:textColorHint="@color/white"
            android:textColorLink="@color/white" />

        <EditText
            android:id="@+id/Nick"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/nick"
            android:inputType="textPersonName"
            android:maxLength="20"
            android:textColor="@color/white"
            android:textColorHighlight="@color/white"
            android:textColorHint="@color/white"
            android:textColorLink="@color/white" />

        <EditText
            android:id="@+id/Haslo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/haslo"
            android:inputType="textPassword"
            android:maxLength="32"
            android:textColor="@color/white"

            android:textColorHint="@color/white"
            android:textColorLink="@color/white" />

        <EditText
            android:id="@+id/Haslo2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/powtorzhaslo"
            android:inputType="textPassword"
            android:maxLength="32"
            android:textColor="@color/white"

            android:textColorHint="@color/white"
            android:textColorLink="@color/white" />

        <Button
            android:id="@+id/Rejestracja"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rejestracja" />

        <Button
            android:id="@+id/Logowanie"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/zaloguj" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>