<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EdycjaProfilu"
    android:background="@drawable/blekitne"
    >

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="376dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.413">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/imie2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:fontFamily="sans-serif"
                android:text="@string/imie"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edycja_imie"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:ems="10"
                android:inputType="textPersonName"
                android:maxLength="50" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/nazwisko2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:fontFamily="sans-serif"
                android:text="@string/nazwisko"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edycja_nazwisko"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:ems="10"
                android:inputType="textPersonName"
                android:maxLength="80" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/telefon2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:fontFamily="sans-serif"
                android:text="@string/telefon"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edycja_telefon"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:ems="10"
                android:inputType="phone"
                android:maxLength="9" />

        </LinearLayout>

        <Button
            android:id="@+id/zapisz"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Zapisz" />

        <Button
            android:id="@+id/powrot_profil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="powrót do profilu" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/haslo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:fontFamily="sans-serif"
                android:text="@string/haslo"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edycja_haslo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:ems="10"
                android:inputType="textPassword"
                android:maxLength="32" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/powtorzhaslo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:fontFamily="sans-serif"
                android:text="@string/powtorzhaslo"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edycja_powtorzhaslo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:ems="10"
                android:inputType="textPassword"
                android:maxLength="32" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/obecnehaslo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:fontFamily="sans-serif"
                android:text="@string/obecnehaslo"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edycja_obecnehaslo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:ems="10"
                android:inputType="textPassword"
                android:maxLength="32" />


        </LinearLayout>

        <Button
            android:id="@+id/zmiana_hasla"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Zmień hasło" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>